<resources>
    <string name="app_name">wash me</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Wash Me</string>
    <string name="wait_in_progress">加载中，请稍后...</string>
    <string name="connection_error">联接服务器错误!</string>
    <string name="protocol_error">通讯协议错误!</string>
    <string name="remind">提示</string>
    <string name="sure_exit">确认退出？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="phone_wrong">请正确输入手机号码！</string>
    <string name="pwd_wrong">请输入6-20位密码！</string>
    <string name="code_wrong">请正确输入验证码！</string>
    <string name="main">首页</string>
    <string name="car_info">车辆信息</string>
    <string name="order_manage">订单</string>
    <string name="order_manage1">订单管理</string>
    <string name="more">更多</string>
    <string name="wash_car">洗车</string>
    <string name="wash_car_wax">打蜡</string>
    <string name="i_wash_car">Wash Me</string>
    <string name="phone_num">手机号码</string>
    <string name="please_phone">请输入手机号码</string>
    <string name="password">登录密码</string>
    <string name="please_password">请输入登录密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="empty_user">用户名不能为空!</string>
    <string name="empty_passwd">密码不能为空!</string>
    <string name="register">注册</string>
    <string name="agree">同意</string>
    <string name="agreement">客户服务协议</string>
    <string name="send_code">发送验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="setpwd">设置登录密码</string>
    <string name="setpwdagin">确认密码</string>
    <string name="nick_name">昵称</string>
    <string name="agreementtxt">用户服务协议\n特别提示：
\n1. 本协议由上海喜沃汽车服务有限公司（以下简称“喜沃”）于2014年10月制定并公布并予以实施。

\n2. 会员在进行网站申请注册时应完整、仔细地阅读本协议，会员完成用户注册将被视为完全理解并接受以下全部条款。鉴于除会员之外的其他第三方已经对本协议内容予以确认，在会员以本协议约定的任意一种方式提出预定汽车洗护服务申请并完成付款，本协议即在各方之间发生效力。

\n3. 各相关方接受本协议条款之约定，即视为接受中华人民共和国法律法规的管辖规定并认可中华人民共和国相关政府机关、司法部门做出的裁定书、判决书、决定等法律文书的效力。

\n4. 本协议未作约定事项之补充及对本协议具体条款之解释，由喜沃负责。


\n一，定义：

\n“Wash Me”， 喜沃旗下的，利用先进信息集散技术构建的专业汽车洗护信息服务平台，致力于为会员提供高效、便捷、高品质的预约汽车洗护服务。

\n“预约服务”， 喜沃提供的，接受会员预约汽车洗护服务信息并按照会员要求生成预约汽车洗护服务订单的服务。
\n“汽车洗护服务”是指Wash Me利用电脑、服务器、互联网、电话、移动设备等信息通讯设备，完成汽车洗护服务的信息服务过程。
\n“会员”，   是指按照喜沃的要求完成注册的Wash Me用户。用户可以通过移动设备注册成为Wash Me会员，享受Wash Me为会员提供的服务。
\n“汽车洗护信息服务平台”， 喜沃根据会员预约汽车洗护要求记录预约内容的计算机系统平台，喜沃利用该平台生成会员的预约订单，会员可登录该平台查询汽车洗护记录和消费记录。喜沃利用专业汽车洗护信息服务平台接受会员汽车洗护需求。
\n“订单”， 喜沃汽车洗护信息服务平台提供的，登记会员汽车洗护具体信息的电子订单，喜沃按照电子订单要求提供指定服务。
\n“预约汽车洗护服务费用”， 简称“服务费用”，喜沃按照会员的汽车洗护要求计算得出的，包括喜沃预约服务信息费和喜沃劳务服务费的总费用。
\n“预存汽车洗护服务费用”， 会员提交预约申请后，向喜沃预先支付以完成预约汽车洗护的费用，包括服务费用和一定比例的预存金额。 
\n二，会员注册：
\n第一条 会员享受的服务
\n会员可以享受如下服务：
\n(1) 在完成预约等相关程序并接受双方协议的基础上接受Wash Me提供的汽车洗护服务；
\n(2) 拥有会员信息管理系统，长期有效地保存在Wash Me数据库；
\n(3) 随时查询历史汽车洗护记录；
\n(4) 享受最新汽车洗护信息及优惠政策；
\n(5) “Wash Me”根据互联网和移动互联网平台规划随时增添的其它服务。
\n第二条 会员注册
\n用户根据“Wash Me”会员注册的要求填写真实会员信息，并表示接受本协议后方可申请成为会员。
\n第三条 会员的ID及密码的保管
\n会员的ID和密码由会员自行保管。禁止会员将自己的ID及密码交付第三人使用，若第三者凭正确的用户ID密码进行网络活动（网络预订等），将被Wash Me视为该会员自身行为，该行为引起的一切法律后果由会员承担。
\n第四条 会员的义务
\n会员不得从事以下行为，若发生下列行为，则会员应承担相应的法律责任。Wash Me有权限制或取消其会员权限：
\n(1) 申请或者变更会员信息时提供虚假信息；
\n(2) 盗用他人信息；
\n(3) 利用任何方式方法危害“Wash Me”网站系统的安全；
\n(4) 利用Wash Me损害任何第三人的合法权益。
\n(5) 在Wash Me网站上复制、发布任何形式的虚假信息，或复制、发布含有下列内容的信息：
\na. 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一；
\nb. 损害国家荣誉和利益；
\nc. 煽动民族仇恨、民族歧视，破坏民族团结；
\nd. 破坏国家宗教政策，宣扬邪教和封建迷信；
\ne. 散布谣言，扰乱社会秩序，破坏社会稳定；
\nf. 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪；
\ng. 含有法律、行政法规禁止的其他内容。
\n第五条 喜沃的义务,
\n喜沃保证遵从其在Wash Me上公布的所有服务承诺，努力创建高效便捷的汽车服务平台。
\n在会员完整履行汽车洗护等程序后，在双方协议的框架下，为会员提供汽车洗护服务。
Wash Me为保障会员安全地使用其提供的网络服务，将建立保护会员信息（包括信用信息）的安全系统并定期进行维护。非经国家有关机关的指令，喜沃绝不向任何人泄漏会员的任何信息。
\n第六条 通知的发送
\n喜沃通过会员注册时指定的邮箱、指定的手机号码以及APP应用软件中通知栏向会员发送通知。Wash Me向多数会员发送通知时，可以在其微信公众服务号公布该通知，该种通知模式与向会员发送个别通知具有同样的法律效力。 
\n二，汽车洗护服务
\n汽车洗护服务预约
\n会员完成注册后可在喜沃工作时间内、最小预订时间前通过：①4008-591-577客服电话；②手机APP软件；③喜沃认可的其他方式向喜沃发出预约汽车洗护申请并满足本协议支付结算条款时，喜沃按照会员的预约信息为会员调度服务汽车洗护人员，按照会员指定的汽车洗护时间、汽车洗护地点提供汽车洗护服务。 
\n1. 预约方式
\n1.1 电话预约
\n1.1.1 拨打喜沃客服电话4008-591-577预约汽车洗护服务。
\n1.1.2 非会员预留预约人员发出的电话预约，喜沃将不予受理。
\n1.2. 手机app预约
\n1.2.1 会员通过手机软件下载平台下载安装app。
\n1.2.2 会员使用其在Wash Me注册的用户名及密码登录后，选择“汽车洗护”或其他服务，按照提示输入预约信息完毕后提交预约订单。
\n2. 订单信息
\n会员应当按照喜沃的要求提供预约信息，会员提供的全部预约信息作为一个整体构成一个订单。
\n费用构成
\n1.喜沃向会员收取的服务费用包括：
\n1.1 喜沃预约服务信息费；
\n1.2 喜沃劳务服务费。
\n2. 服务费用的收取标准详见喜沃手机App或致电4008-591-577咨询。
\n支付结算
\n1. 会员可采用经喜沃确认的下列方式完成支付结算。采用下列第1.1种方式进行支付结算。
\n1.1会员通过注册成为Wash Me正式用户后，可以向喜沃指定账户内直接存入一定数额的资金，作为会员今后接受服务时的消费资金，不需每次单独交纳任何费用。会员说明开票要求，喜沃开具相应的发票。
\n2. 喜沃在Wash Me提供订单管理功能，会员可以随时查询订单情况及预存汽车洗护服务费用使用情况。
\n3. 会员应在每次接受服务后及时查询实际付款情况，如有异议应在汽车洗护服务完成后48小时内通知喜沃，喜沃负责对会员提出的异议进行解释和处理。
\n4. 如会员账户内剩余金额不足以支付最低汽车洗护消费额的，经喜沃通知后，会员需及时为账户充值；如未及时充值，则喜沃不提供该次预约汽车洗护代理服务。
\n包月
\n1.	 包月是喜沃提供按月计算的汽车养护服务模式，根据喜沃提供的包月价格与其提供的汽车养护服务，会员可按月支付费用，限期为一个自然月。
\n2.	 每月预先支付包月费用，喜沃给会员提供相应的汽车养护服务。
\n3.	 当月汽车养护服务次数以喜沃记录为准。
\n4.	 当月汽车养护服务剩余次数到期后不结转，所有次数清零。
\n双方权利义务
\n双方均应依照本协议的规定履行各自的权利义务，本协议未尽事宜由双方分别签订协议另行约定。
\n风险分担
\n1. 会员发生的风险 
\n1.1 会员变更、取消订单的：
\n按计费规则中的“订单变更”执行。
\n1.2 会员污损、损坏车辆的：
\n会员在接受服务过程中如污损、损坏车辆的，因会员的行为造成车辆受到损坏的，喜沃不承担责任。
\n1.3 会员侮辱、伤害服务人员的：
\n如会员在接受服务过程中无故侮辱、伤害服务人员，或其他因会员的行为造成服务人员受到人身损伤的，由会员向喜沃承担法律责任。
\n1.4 会员利用汽车洗护服务车辆从事违法犯罪活动的：
\n会员在接受服务过程中利用汽车洗护服务车辆从事违法犯罪活动的，喜沃不负任何责任。
\n1.5 会员利用服务人员从事违法犯罪活动的：
\n会员在接受服务过程中利用服务人员从事违法犯罪活动的，喜沃不负任何责任。
\n1.6 其他行为：
\n会员在接受服务过程中发生其他如财物丢失等行为事件的，由喜沃负责处理解决，提供必要的协调帮助。
\n2. 外部风险
\n2.1 意外事件
\n如遭遇其他意外事件影响、延误、妨碍喜沃的服务人员完成汽车洗护服务的，喜沃应根据实际情况协商解决。
\n3. 喜沃造成的风险
\n3.1 工作人员：
\n因喜沃工作人员的操作失误或疏忽导致订单信息错误的，由此造成的损失由喜沃负责承担。

\n4. 会员的其他损失
\n对会员因在接受第三方公司提供的汽车洗护服务过程中遭遇的其他间接损失或可预期损失，喜沃不负任何责任。
投诉处置
\n1. 喜沃负责对服务过程中发生的投诉情况进行定性和处理。喜沃从客户感受出发，快速有效的处理客户意见。
\n2. 喜沃经网站和电话两种渠道收集客户的投诉信息。在收到投诉之后，喜沃应在24小时内与客户充分沟通, 辅以车辆照片和检查服务记录的方式, 做出初步调查报告。
特别声明
\n1. 鉴于网络服务的特殊性，会员授权喜沃可在以下情形发生时随时变更、中断或终止部分或全部的网络服务：
\n1.1 由于喜沃需要定期或不定期地对提供网络服务的平台（如互联网网站）或相关的设备进行检修或者维护，如因此类情况而造成网络服务合理的中断，喜沃无需为此承担责任。对于因不可抗力或非喜沃的原因造成的网络服务中断或其它缺陷，喜沃不承担任何责任。
\n1.2 会员明确同意其使用Wash Me网络服务所存在的风险及产生的一切后果将完全由其自己承担，喜沃不承担任何责任。
\n1.3 喜沃将为达到服务便利、优质、广泛等目的而设置外部链接。但该等外部链接指向的网页内容不由喜沃实际控制，因此，喜沃不保证上述网页内容的准确性和完整性，并对网页内容不承担任何法律责任。
\n2. 若喜沃对本协议作出任何修改，将由喜沃及时将修订后的协议及时公告。该等公告即视为对会员进行了通知。会员如果不同意喜沃对本协议相关条款所做的修改，会员有权停止使用汽车洗护服务。如果会员继续使用汽车洗护服务，则视为会员接受喜沃对本协议相关条款所做的修改。 
\n3. 本协议项下喜沃对于会员所有的通知均可通过网页公告、电子邮件、手机短信或常规的信件传送等方式进行；喜沃可任意选择其中一种方式通知会员，该通知于发送之日视为已送达会员，会员知悉并接受通知之内容。
\n4. 会员如有任何事宜需通知喜沃，应当通过喜沃对外正式公布的通信地址、传真号码、电子邮件地址等联系方式进行联系及送达。
\n5. 本协议履行过程中发生的争议，双方应友好协商解决，无法协商解决的，双方一致同意将争议提交喜沃所在地人民法院诉讼解决。
会员在此确认并声明，其已认真阅读以上协议内容并充分理解其含义，并同意本协议中之内容约定。
上海喜沃汽车服务有限公司
2014年10月
    </string>
    <string name="alert">提示</string>
    <string name="register_suc">注册成功</string>
    <string name="sure">确定</string>
    <string name="agreement01">《客户服务协议》</string>
    <string name="telephone_wrong">请输入正确的手机号码！</string>
    <string name="code_null_erro">验证码不能为空</string>
    <string name="code_length_erro">请输入正确的验证码！</string>
    <string name="pwd_null_erro">密码不能为空</string>
    <string name="pwd_format_erro">请输入6~20位密码！</string>
    <string name="pwd_dif_erro">两次输入的密码不一致，请您重新输入</string>
    <string name="nickname_length_erro">昵称长度不能小于2</string>
    <string name="nickname_format_erro">昵称应为长度2~16个字符之间的中文、英文字母、数字、下划线组成</string>
    <string name="find_pwd">找回密码</string>
    <string name="input_new_code">输入新密码</string>
    <string name="sure_new_code">确认新密码</string>
    <string name="submit">提交</string>
    <string name="get_code">获取验证码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="sure_new_pwd">确认新密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="modify_pwd">修改密码</string>
    <string name="add_symbol">+</string>
    <string name="wash">洗</string>
    <string name="wax">蜡</string>
    <string name="add_car">+ 添加车辆信息</string>
    <string name="car_info_title"> ，您好！\n您名下的豪车有：</string>
    <string name="monthly_info_title">，您好！\n您的包月车辆有：</string>
    <string name="contact_num">联系电话</string>
    <string name="website">停车地址</string>
    <string name="car_type">型&#160;&#160;&#160;&#160;号</string>
    <string name="car_brand">品&#160;&#160;&#160;&#160;牌</string>
    <string name="car_color">颜&#160;&#160;&#160;&#160;色</string>
    <string name="car_pic">汽车照片</string>
    <string name="paid">已经支付</string>
    <string name="wait_pay">等待支付</string>
    <string name="completed">交易完成</string>
    <string name="closed">交易关闭</string>
    <string name="serial_number">流水号</string>
    <string name="this_month">本月</string>
    <string name="pull_to_refresh_pull_label">下拉刷新&#8230;</string>
    <string name="pull_to_refresh_release_label">松开刷新&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pay_title_txt">您的订单已提交成功，请在45分钟内支付金额，订单保留45分钟</string>
    <string name="web_center">网点中心</string>
    <string name="your_statu">您的状态</string>
    <string name="cant_complete">当天不能完成，明天优选</string>
    <string name="car_order">车辆订单</string>
    <string name="alipay">支付宝付款</string>
    <string name="account_money_pay">账号余额付款</string>
    <string name="activity_pay">免费活动</string>
    <string name="sure_pay">确认付款</string>
    <string name="fee">消费金额</string>
    <string name="address">所在地点</string>
    <string name="vip_customer">贵宾客户</string>
    <string name="phone">电话号码</string>
    <string name="car_num">车牌号码</string>
    <string name="server_type">服务类型</string>
    <string name="transaction_amount">交易金额</string>
    <string name="order_detail">交易详情</string>
    <string name="cannel_order">取消订单</string>
    <string name="pay_now">立即付款</string>
    <string name="cannel">取消</string>
    <string name="pay_sure">付款确认</string>
    <string name="end_time">完成时间</string>
    <string name="order_state">订单状态</string>
    <string name="custom_info">客户信息</string>
    <string name="password_str">密码</string>
    <string name="integral_manage">积分管理</string>
    <string name="help">帮助</string>
    <string name="tell_friend">告诉朋友</string>
    <string name="about">关于</string>
    <string name="qiut">退出登录</string>
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="user_name">用户名</string>
    <string name="email">我的邮箱</string>
    <string name="my_phone">我的手机</string>
    <string name="modify_info">修改个人信息</string>
    <string name="choice_pay_type">选择付款方式</string>
    <string name="old_pwd_null_error">旧密码不能为空</string>
    <string name="new_pwd_null_error">新密码不能为空</string>
    <string name="car_code_null_error">请正确输入车牌号</string>
    <string name="car_brand_null_error">请输入车辆品牌</string>
    <string name="car_color_null_error">请输入车辆颜色</string>
    <string name="add_img">添加照片</string>
    <string name="user_recharge">账户充值</string>
    <string name="cur_balance">当前余额</string>
    <string name="chose_money">选择金额（你可以选择￥200至￥1200的任何金额）</string>
    <string name="input_custom_money">￥输入自定义金额</string>
    <string name="money200">￥200</string>
    <string name="money400">￥400</string>
    <string name="money600">￥600</string>
    <string name="money800">￥800</string>
    <string name="money1000">￥1000</string>
    <string name="money1200">￥1200</string>
    <string name="recharge">充值</string>
    <string name="lock_addr">锁定地址</string>
    <string name="default_addr">默认地址</string>
    <string name="website_set">网点设置</string>
    <string name="please_detail_address">请输入详细地址</string>
    <string name="detail_address">详细地址</string>
    <string name="websit_info">所在网点</string>
    <string name="clean_in">清洗内饰</string>
    <string name="price_title">订单价格</string>
    <string name="abouttxt">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;上海喜沃汽车服务是一家专门从事于汽车洗护服务的有限责任公司。在沪上推出的Wash Me品牌首先提出了手机移动互联与汽车养护服务相结合的服务模式。同时，采用人车分离,社区化的经营理念。让您在轻松自在之中，完成对您爱车的洗护服务。
							\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;我们的宗旨就是让洗车变得更轻松！
	</string>
</resources>