<?xml version="1.0" encoding="utf-8"?>  
  
<LinearLayout  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical"  
    xmlns:android="http://schemas.android.com/apk/res/android">  
  
  
    <FrameLayout  
        android:id="@+id/content"  
        android:layout_width="match_parent"  
        android:layout_height="0dip"  
        android:layout_weight="1" />
  
    <RadioGroup  
        android:id="@+id/rg_tab"  
        android:orientation="horizontal"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        android:background="@color/white">  
  
        <RadioButton  
            android:id="@+id/home_page"
            style="@style/weibo_tab" 
            android:gravity="center_horizontal" 
            android:checked="true"
            android:drawableTop="@drawable/homepage_selector"  
            android:text="@string/main" 
            />  
  
        <RadioButton  
            android:id="@+id/car_info"
            style="@style/weibo_tab"  
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/car_info_selector"  
            android:text="@string/car_info" 
            />  
  
        <RadioButton  
            android:id="@+id/order_manager"
            style="@style/weibo_tab"  
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/order_manage_selector"  
            android:text="@string/order_manage1" 
            />  
  
        <RadioButton  
            android:id="@+id/more"
            style="@style/weibo_tab"  
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/more_selector"  
            android:text="@string/more" 
            />  
    </RadioGroup>  
</LinearLayout>