<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@android:color/white" >

        <Button
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/backbt" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.1dip"
            android:layout_alignParentBottom="true"
            android:background="@color/orange" />
    </RelativeLayout>
    
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="50dp">
	    <LinearLayout android:id="@+id/phone_view"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:background="@color/white"
	        android:orientation="horizontal"
	        android:gravity="center_vertical">
	        <TextView android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/phone_num"
	            android:textColor="@android:color/black"
	            android:textSize="18sp"/>
	        
	        <EditText android:id="@+id/phone_num"
	            android:layout_height="wrap_content"
	            android:layout_width="fill_parent"
	            android:hint="@string/please_phone"
	            android:background="@null"
	            android:textSize="18sp"
	            android:layout_marginLeft="8dp"
	            android:maxLength="11"
	            android:inputType="phone"/>
	    </LinearLayout>
	    
	    <LinearLayout android:id="@+id/password_view"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:orientation="horizontal"
	        android:background="@color/white"
	        android:gravity="center_vertical">
	        <TextView android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/password"
	            android:textColor="@android:color/black"
	            android:textSize="18sp"/>
	        
	        <EditText android:id="@+id/password"
	            android:layout_height="wrap_content"
	            android:layout_width="fill_parent"
	            android:hint="@string/please_password"
	            android:background="@null"
	            android:textSize="18sp"
	            android:inputType="textPassword"
	            android:layout_marginLeft="8dp"/>
	    </LinearLayout>
	</LinearLayout>
	
	<Button android:id="@+id/login_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/login"
	    android:background="@drawable/orange_btn"
	    android:textColor="@color/white"
	    android:textSize="18sp"/>
	
	<Button android:id="@+id/register_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/register"
	    android:background="@drawable/blue_btn"
	    android:textColor="@color/white"
	    android:textSize="18sp"/>
	
	<Button android:id="@+id/forget_pwd"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/forget_pwd"
	    android:textColor="#0000FF"
	    android:background="@null"
	    android:textSize="15sp"/>
</LinearLayout>