<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@drawable/dialog_white_bg"
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/alert"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/register_suc"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line"/>
    <Button android:id="@+id/sure_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:background="@null"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/orange"/>
</LinearLayout>
