<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@drawable/dialog_white_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/pay_sure"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line" />

    <TextView
        android:id="@+id/pay_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="50.00"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:id="@+id/alipay_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/bank_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay"
            android:textSize="18sp"
            android:textColor="@android:color/black" 
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right_icon"
            android:scaleType="center" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line" />
    
    <RelativeLayout
        android:id="@+id/account_money_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/account_money_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_money_pay"
            android:textSize="18sp"
            android:textColor="@android:color/black" 
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right_icon"
            android:scaleType="center" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line" />
    
    <RelativeLayout
        android:id="@+id/activity_pay_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/activity_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_pay"
            android:textSize="18sp"
            android:textColor="@android:color/black" 
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/right_icon"
            android:scaleType="center" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gray_line" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp" 
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/cannel_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn_bg"
            android:padding="5dp"
            android:text="@string/cannel"
            android:textColor="@color/white"
            android:layout_marginRight="5dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sure_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/cannel_btn"
            android:background="@drawable/orange_btn_bg"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>